real finish this time. Added svg and fixed spacing for large screen. Responsive on future updates

--- a/app/assets/scss/base/_contact-form.scss
+++ b/app/assets/scss/base/_contact-form.scss
@@ -1,141 +1,173 @@
 .contact-form {
-    background: white;
-    border-radius: 5px;
-    border: 1px solid $color--gray__lighter;
-    padding: 1.5em 2em;
-    box-shadow: 1px 1px 4px hsla(0, 0%, 0%, 0.4);
+	background: white;
+	border-radius: 5px;
+	border: 1px solid $color--gray__lighter;
+	padding: 1.5em 2em;
+	box-shadow: 1px 1px 4px hsla(0, 0%, 0%, 0.4);
 
-    display: grid;
-    grid-template-columns: 1.65fr 0.25fr 1.35fr;
-    transition: all 0.5s ease 0s;
-    box-sizing: border-box;
+	display: grid;
+	grid-template-columns: 1.65fr 0.2fr 1.35fr;
+	transition: all 0.3s ease 0s;
+	box-sizing: border-box;
 
-    &:hover {
-        box-shadow: 2px 3px 5px hsla(0, 0%, 0%, 0.6);
-    }
+	&:hover {
+		box-shadow: 2px 3px 5px hsla(0, 0%, 0%, 0.6);
+	}
 
-    &__title {
-        grid-column: 1/3;
-        grid-row: 1;
-        text-align: center;
-    }
+	&__title {
+		grid-column: 1/2;
+		grid-row: 1/3;
+		text-align: center;
 
-    &__input {
-        grid-column: 1/2;
-        grid-row: 2;
-    }
+		h2 {
+			margin-bottom: 0;
+		}
 
-    &__midsection {
-        grid-column: 2/3;
-        grid-row: 2;
-        background: linear-gradient(hsl(0, 0%, 0%), hsl(0, 0%, 0%)) no-repeat center/1px 100%;
-    }
+		p.small {
+			margin: 0;
+			line-height: 1;
+		}
+	}
 
-    &__info {
-        grid-column: 3/4;
-        grid-row: 2;
+	&__input {
+		grid-column: 1/2;
+		grid-row: 3/4;
+	}
 
-        &__links {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+	&__midsection {
+		grid-column: 2/3;
+		grid-row: 2/5;
+		background: linear-gradient(hsl(0, 0%, 0%), hsl(0, 0%, 0%)) no-repeat
+			center/1px 100%;
+	}
 
-            p {
-                flex: 1;
-                text-align: center;
-            }
-        }
-    }
+	// &__postage-stamp {
+	// 	grid-column: 3/4;
+	// 	grid-row: 1/2;
+	// }
 
-    &__submit {
-        margin: 0.75em 0.25em 0.25em;
-        grid-column: 1/4;
-        grid-row: 3;
-        display: flex;
-        justify-content: space-between;
-    }
+	&__info {
+		grid-column: 3/4;
+		grid-row: 1/4;
 
-    &__message {
-        label {
-            display: inline-block;
-        }
-    }
+		&__postcard-stamp {
+			display: flex;
+			flex-direction: row-reverse;
 
-    input {
-        font-family: $font--muli;
-        font-weight: 400;
-        color: $color--text-default;
+			svg {
+				max-width: 70%;
+			}
+		}
 
-        &[type='text'] {
-            transition: all 0.3s ease-in-out;
-            box-sizing: border-box;
-            border: none;
-            border-bottom: 2px solid $color--gray;
-            // border-top-left-radius: 4px;
-            // border-top-right-radius: 4px;
-            @include ms-respond(font-size, -1);
-            outline: 0;
-            padding: 2px 1px 0px;
-            text-align: center;
-            position: relative;
-            bottom: 0.16rem;
+		&__links {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
 
-            &:focus {
-                background-color: $color--secondary;
-                border-bottom: 2px solid transparent;
-                color: white;
-            }
-        }
+			p {
+				flex: 1;
+				text-align: center;
+			}
+		}
+	}
 
-        &[type='submit'] {
-            border: 1px solid $color--accent;
+	&__submit {
+		margin: 0.75em 0.25em 0.25em;
+		grid-column: 1/4;
+		grid-row: 4/7;
+		display: flex;
+		justify-content: space-between;
+	}
 
-            //Button styles
-            position: relative;
-            outline: none;
-            transition: all 0.2s ease-in-out;
-            border: 1px solid $color--primary;
-            box-shadow: 0 3px 6px 1px rgba(23, 43, 99, 0.24);
-            background: transparent;
-            color: $color--primary;
-            letter-spacing: 0.1rem;
-            font-size: 1.2rem;
-            border-radius: 4px;
-            padding: 0.75rem 1.75rem;
-            cursor: pointer;
-            backface-visibility: hidden;
-            transform: translateZ(0) scale(1, 1);
-            transform: translate3d(0, 0, 0);
+	&__message {
+		label {
+			display: inline-block;
+		}
+	}
 
-            &:hover {
-                background: $color--secondary;
-                border: 1px solid $color--secondary;
-                color: white;
-            }
+	input {
+		font-family: $font--muli;
+		font-weight: 400;
+		color: $color--text-default;
 
-            &:active {
-                transform: scale3d(0.95, 0.95, 0.95);
-                box-shadow: 0 0px 0px rgba(23, 43, 99, 0.24);
-                background: darken($color--secondary, 10);
-            }
-        }
-    }
+		&[type='text'] {
+			transition: all 0.3s ease-in-out;
+			box-sizing: border-box;
+			border: none;
+			border-bottom: 2px solid $color--gray;
+			// border-top-left-radius: 4px;
+			// border-top-right-radius: 4px;
+			@include ms-respond(font-size, 0);
+			outline: 0;
+			padding: 2px 1px 0px;
+			text-align: center;
+			position: relative;
+			bottom: 0.16rem;
 
-    textarea {
-        border: 2px solid $color--gray;
-        width: 90%;
-        padding: 0.625rem 0.8rem;
-        overflow: auto;
+			&:hover {
+				background: lighten($color--secondary, 5%);
+				border-bottom: 2px solid transparent;
+			}
 
-        font-family: $font--muli;
-        font-weight: 300;
-        color: $color--text-default;
-        font-size: 1.2rem;
+			&:focus {
+				background: $color--secondary
+					linear-gradient(hsla(0, 0%, 0%, 0.5), hsla(0, 0%, 0%, 0.5));
+				border-bottom: 2px solid transparent;
+				color: white;
+			}
+		}
 
-        &:hover,
-        &:focus,
-        &:active {
-            border: 2px solid $color--secondary;
-        }
-    }
+		&[type='submit'] {
+			border: 1px solid $color--accent;
+
+			//Button styles
+			position: relative;
+			outline: none;
+			transition: all 0.2s ease-in-out;
+			border: 1px solid $color--primary;
+			box-shadow: 0 3px 6px 1px rgba(23, 43, 99, 0.24);
+			background: transparent;
+			color: $color--primary;
+			letter-spacing: 0.1rem;
+			font-size: 1.2rem;
+			border-radius: 4px;
+			padding: 0.75rem 1.75rem;
+			cursor: pointer;
+			backface-visibility: hidden;
+			transform: translateZ(0) scale(1, 1);
+			transform: translate3d(0, 0, 0);
+
+			&:hover {
+				background: $color--secondary;
+				border: 1px solid $color--secondary;
+				color: white;
+			}
+
+			&:active {
+				transform: scale3d(0.95, 0.95, 0.95);
+				box-shadow: 0 0px 0px rgba(23, 43, 99, 0.24);
+				background: darken($color--secondary, 10%);
+			}
+		}
+	}
+
+	textarea {
+		border: 2px solid $color--gray;
+		width: 90%;
+		padding: 0.625rem 0.8rem;
+		overflow: auto;
+
+		font-family: $font--muli;
+		font-weight: 300;
+		color: $color--text-default;
+		font-size: 1.2rem;
+
+		&:hover {
+			border: 2px solid lighten($color--secondary, 5%);
+		}
+		&:focus,
+		&:active {
+			border: 2px solid darken($color--secondary, 10%);
+		}
+	}
 }
